# tap-socrata

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
tap_socrata/: __init__.py  __main__.py  client.py  tap.py
tests/: __init__.py  test_core.py
