[project]
name = "meltanolabs-tap-socrata"
version = "0.0.1"
description = "Singer tap for Socrata, built with the Meltano Singer SDK."
authors = [{ name = "Cody Hanson", email = "cody@codyjhanson.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Socrata",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "singer-sdk[faker]~=0.46.0",
    "requests~=2.32.3",
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]

[project.scripts]
tap-socrata = "tap_socrata.tap:TapSocrata.cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "singer-sdk[testing]~=0.47.4",
    "ipython>=8.31.0,<9",
    "catppuccin[pygments]>=2.3.4,<3",
]

[tool.hatch.build.targets.sdist]
include = ["tap_socrata"]

[tool.hatch.build.targets.wheel]
include = ["tap_socrata"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
